--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -4209,7 +4209,27 @@
  	 	"unitExchange": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"UNITをお求めですか? それとも, お持ちのUNITを利用されます?"
+ 	 	 	 	 	"UNITをお求めですか? それとも, お持ちのUNITを利用されます?",
+ 	 	 	 	 	"ご来店ありがとうございます.",
+ 	 	 	 	 	"シナプス加速送信機は長らく開発中だったんですよ. ご存じでした？",
+ 	 	 	 	 	"ちょうどシナプス加速送信機が入荷したところなんですよ. おひとついかがです？",
+ 	 	 	 	 	"アラサカUNIT交換所へようこそ.",
+ 	 	 	 	 	"ご存じですか？ 現在使用されているシナプス加速送信機って, 実はver2.0なんですよ.",
+ 	 	 	 	 	"「珍しいシナプス加速送信機」は「シナプス加速送信機」とは別物ですよ！",
+ 	 	 	 	 	"ビットコイン？ いえいえ, ここではUNITでお取引して頂きます.",
+ 	 	 	 	 	"銀行にいるロッシーって女性, 知ってます？ 学生時代の同級生なんですよ.",
+ 	 	 	 	 	"トリノキーマートのドクターにかかってはいかがです？ どうも顔色が優れないようですよ.",
+ 	 	 	 	 	"ここの人たちは皆, ホントにいい人ばかりなんですよ！",
+ 	 	 	 	 	"最近, どこかへお出かけになったりしました？ 私はついこの間ネオ・ジャパンから帰ってきたところなんですよ.",
+ 	 	 	 	 	"寒い日に飲むホットティーに勝るものってないですよね",
+ 	 	 	 	 	"シナプス加速送信機がたくさん入荷したんです. ちょっと見ていかれませんか？",
+ 	 	 	 	 	"皆がシナプス加速送信機を使うので, いつ効果が始まるか読めないんですよ. タスクを行う際はご注意くださいね.",
+ 	 	 	 	 	"この間, ラジオがひどい壊れ方をしたんですよ. 調べてみたら, 3Helixネットワークのせいだったんです！",
+ 	 	 	 	 	"今日を皆さんにとっての素敵な日にしませんか？ さぁさぁ, UNITを購入してEXPブーストを起動しましょう！",
+ 	 	 	 	 	"ここで購入したUNITを使うと, 大勢の人の訳に立てるんですよ",
+ 	 	 	 	 	"課金しても別に有利にならないゲーム...ふふ, どんなゲームになっていくんでしょうね！",
+ 	 	 	 	 	"ここでのお買い物は, 皆の助けになるんですよ. 世界中の全員...そう, デベロッパーさえもです！",
+ 	 	 	 	 	"グローバルバフの通知がうるさい？ まぁまぁ, 皆が送信機を使ってるんだから良い事じゃないですか."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Do you want to buy Units, or use your Units?"
@@ -4231,7 +4251,25 @@
  	 	"cosmetic": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"このゲームにカンパしてもらえないかしら? プロフィールを綺麗にしてあげるわよ"
+ 	 	 	 	 	"このゲームにカンパしてもらえないかしら？ プロフィールを綺麗にしてあげるわよ",
+ 	 	 	 	 	"ねぇ, 毎月のサブスクリプションに加入してくれたりしない？",
+ 	 	 	 	 	"いらっしゃいませ！ 何をお望みかしら？",
+ 	 	 	 	 	"他のみんなより目立ちたい？ それなら「寄付者」のプランはいかが？",
+ 	 	 	 	 	"サブスクリプションに加入してくれたら, プロフィール画像を用意してあげる！ どうかしら？",
+ 	 	 	 	 	"チャットフレームをカラフルにしたくはないかしら？ ぜひサブスクライブしてね！?",
+ 	 	 	 	 	"一番お手頃なサブスクプランなら, なんと月々たったコーヒー1杯のお値段！ ね, あたしのためにちょっぴり我慢してくれたりしない？",
+ 	 	 	 	 	"寄付してくれたらあなたのプロフィール画面が綺麗になるし, このゲームの開発の助けにもなるわ.",
+ 	 	 	 	 	"派手にいきましょ！ さぁさぁ, この新コスチュームで, 太陽よりも眩しい輝きを放って！",
+ 	 	 	 	 	"課金してもらっても, 便利な機能の解放とかはできないんだけど...その代わり, ナイスな見た目にしてあげるわよ！",
+ 	 	 	 	 	"これからの流行りは「カラフル」. これで決まり！ あなたもカラフルにしてあげるわ...お代さえいただければ, ね♡.",
+ 	 	 	 	 	"あなたは絵が好きでしょ, あたしも絵が好きでしょ, 世界中のみーんな絵が好きでしょ？ ちょっとした額を払ってもらえれば, 誰でも自分用に絵をセットできるようになるわよ！",
+ 	 	 	 	 	"寄付のおかげでゲームの開発が進められてるの. 頂いたお金で, 作業のお供のコーヒーを買うのよ！ ",
+ 	 	 	 	 	"コーディングって本当に大変だわ！ コーヒー1杯分のお値段で, あたしを労ってくれない？",
+ 	 	 	 	 	"寄付してもらえたらゲームの開発がとっても助かるし, あなたのプロフィールもイイ感じになるわよ！ プロフ画像, カラフルなチャット, それからアニメーションも付けれちゃう！",
+ 	 	 	 	 	"世界はお金で回ってる！ あなたが寄付してくれたら, あたしもバイトじゃなしにここで働けるようになるんだけどな～？",
+ 	 	 	 	 	"イカしたプロフィール欄...欲しくない？",
+ 	 	 	 	 	"あなた, センスがありそうね！ どうかしら, うちでクールなスタイルにしてかない？",
+ 	 	 	 	 	"美しくなるためのヒント その1 ： なんと, 色は世界の半分を構築しています！"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hi! Donate to get cosmetic perks and to help support Free-to-Win games like this one!"
@@ -4312,6 +4350,43 @@
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
  	 	 	 	 	"アンタにぴったりの装備を見繕ってやんよ",
+ 	 	 	 	 	"ビットコインさえ支払ってくれるンなら, なんなりと提供してやるよ.",
+ 	 	 	 	 	"よう, お客さん. 何をお探しかな？",
+ 	 	 	 	 	"今日の収集の成果を見てってくんな.",
+ 	 	 	 	 	"これより上等の装備にはこの辺じゃお目にかかれないよ.",
+ 	 	 	 	 	"今日の収獲を見とくれよ.",
+ 	 	 	 	 	"荒野で盗れた新鮮な装備品さ.",
+ 	 	 	 	 	"今日は何をお求めかな？",
+ 	 	 	 	 	"とっとと買うモン決めとくれよ. 私だってヒマじゃないんだ.",
+ 	 	 	 	 	"何か気になるもんはある？",
+ 	 	 	 	 	"私の店にようこそ. 好きに見ていきな.",
+ 	 	 	 	 	"やぁ, お客さん. 何かお探しかい？",
+ 	 	 	 	 	"ウチでしか取り扱ってない高品質の武器さ.",
+ 	 	 	 	 	"装備は慎重に選ぶタイプかい？",
+ 	 	 	 	 	"シャングリ・ラで一番の装備屋があなたのお側に, ってね.",
+ 	 	 	 	 	"一人で冒険するのは危険だ. 忘れないようにしなよ.",
+ 	 	 	 	 	"この店を開くまでは, 私も冒険者をやってたよ.",
+ 	 	 	 	 	"返品・交換は受け付けてないよ. 買ったモンは責任持って使ってくんな.",
+ 	 	 	 	 	"まだまだあるぜ. もっと見てくよな？,
+ 	 	 	 	 	"最高品質の武器と防具さ.",
+ 	 	 	 	 	"銃, ヘルム, 他にもいろいろある. お望みのものは大抵そろってると思うよ.",
+ 	 	 	 	 	"身を守る装備が欲しいかい, それとも強力な武器をお探しかな？",
+ 	 	 	 	 	"うん？ これとそれが欲しいのかい？",
+ 	 	 	 	 	"ま, 言ってしまえばガラクタみたいなもんばかりかもしれないね. けど, なかなか悪くないだろ？",
+ 	 	 	 	 	"こんなのガラクタだっていうヤツもいるかもね. 私？ 私にとっちゃあもちろんお宝さ.",
+ 	 	 	 	 	"ワールドスレイヤーってヤツに会ったことある？",
+ 	 	 	 	 	"大統領に会ったらよろしく言っといてくれよな！",
+ 	 	 	 	 	"ルシールのヤツ, 何するつもりなんだか...",
+ 	 	 	 	 	"冷やかしはご勘弁願うよ. 何か買ってってくれよな！",
+ 	 	 	 	 	"何かお求めの品があるのかい？",
+ 	 	 	 	 	"はーん. アンタ, 「バーゲン」の何たるかを分かってるみたいだね...やるじゃん",
+ 	 	 	 	 	"昔はアンタみたいな冒険者だったんだけど, 膝に弾を受けちまってさ...",
+ 	 	 	 	 	"LED, ロープ, 爆薬. 欲しいかい？ もちろん持ってっていいよ. ビットコインさえちゃんと払ってくれるんならね.",
+ 	 	 	 	 	"出来る限り一番いいブラスターを探して集めてきてるのさ.",
+ 	 	 	 	 	"おや, 随分いい武器を他所で買ってきたみたいじゃん. ウチでも何か買ってってくんない？",
+ 	 	 	 	 	"バーでさぁ, 3人も刺し殺してるヤベー奴を見ちゃったことあるんだよね...エンピツで.",
+ 	 	 	 	 	"いらっしゃい, バーバ・ヤーガさん.",
+ 	 	 	 	 	"ブギーマン！？ ...なんだ, アンタか. びっくりしたよ"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"You will find the best gear here, trust me."
@@ -4358,7 +4433,39 @@
  	 	"store": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"よう...まあ見てってくれや"
+ 	 	 	 	 	"よう...まあ見てってくれや",
+ 	 	 	 	 	"怪我をした？ そんならここへ来て正解だ.",
+ 	 	 	 	 	"安もんからちゃんとしたもんまで, 何でも揃えてあるのさ.",
+ 	 	 	 	 	"ストリートエンジェルってヤツを知ってるか？",
+ 	 	 	 	 	"いらっしゃい, うちはトリノキーマートだ. 俺のことは気軽にドクターと呼んでくれ.",
+ 	 	 	 	 	"24時間いつでも営業中だ. 営業時間外を除いてはな.",
+ 	 	 	 	 	"店でトラブルを起こしてはくれるなよ. 外から持ち込むのもナシだ.",
+ 	 	 	 	 	"万引きでも企んでみろ, うちの店に新しいマネキンが増えることになるぜ.",
+ 	 	 	 	 	"入ってくる前に, せめて止血ぐらいしてくれんかね.",
+ 	 	 	 	 	"返金も交換もナシだ. 慈善事業をやってるわけじゃないんでね.",
+ 	 	 	 	 	"よう, 若造. 今日はどうした？",
+ 	 	 	 	 	"Don't stop at Grade 7, or else you'll be slaving away here forever like me.",
+ 	 	 	 	 	"ここがシャングリ・ラで一番の医療器具販売店さ.",
+ 	 	 	 	 	"またSLPDの奴らが騒ぎを起こしやがった. 全く, 評議会にはちゃんともらいたいもんだ I hope the council puts them in their place.",
+ 	 	 	 	 	"なあ, 3Helixネットワークって連中を聞いたことはあるか?",
+ 	 	 	 	 	"Hey kid, ever run into anyone called the Worldslayer?",
+ 	 	 	 	 	"月にあるレストランってのを聞いたことがあるか？美味い料理はあるんだが, 空気がありやしない！Great food but no atmosphere!",
+ 	 	 	 	 	"A cheese factory exploded in France. There was da brie everywhere!",
+ 	 	 	 	 	"地質学も「ロック」だが, それがあるのは地理のお陰だろう, ってなGeology rocks but Geography is where it’s at!",
+ 	 	 	 	 	"なんで葬儀ってのは毎朝9時にやるのかね. 俺は朝型じゃないってのに...",
+ 	 	 	 	 	"Why did Adele cross the road? To say hello from the other side.",
+ 	 	 	 	 	"階段ってヤツは信用ならねぇんだ. 絶対どこかに繋がってやがる...",
+ 	 	 	 	 	"スシがミツバチに向かって何て言うか知ってるか？ 「ワサbee！」ってな.",
+ 	 	 	 	 	"過去と現在, それから未来ってのは, 1本の線になってるのさ. 動詞の時制の話だがな.",
+ 	 	 	 	 	"電車なんて使うのはやめときな. They have loco motives.",
+ 	 	 	 	 	"何でボールがどんどん大きくなっていくんだろうって思ってたんだよ. 次の瞬間には俺の顔面に直撃ときたもんだ.",
+ 	 	 	 	 	"I used to work in a shoe-recycling shop. It was sole destroying!",
+ 	 	 	 	 	"Come to Quark's! Quark's is fun! Come right now – and don't walk – run!",
+ 	 	 	 	 	"I've got the best gear you'll find anywhere!",
+ 	 	 	 	 	"I used to collect colored Legendary Special Weapon, but now everything's just white",
+ 	 	 	 	 	"更衣室はあっちだぜ...",
+ 	 	 	 	 	"おい, とっとと買い物を済ませてくれ. さっきからトイレに行きたいんだ.",
+ 	 	 	 	 	"Please take a look! We surely have something that tickles your fancy..."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hey kid... Come check out my goods."
@@ -4372,7 +4479,27 @@
  	 	"bank": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"ようこそ. 何をお預かり致しましょう？"
+ 	 	 	 	 	"いらっしゃいませ. 何をお預かり致しましょう？",
+ 	 	 	 	 	"いらっしゃいませ. あなたの財産を守る, 世界で最も安全な場所でございます.",
+ 	 	 	 	 	"あなたの財産は, どこよりも安全な場所に保管されていますよ.",
+ 	 	 	 	 	"いらっしゃいませ. 何かお預けになりますか？",
+ 	 	 	 	 	"シャングリ・ラ支店でございます. 本日はどうされましたか？",
+ 	 	 	 	 	"私, こう見えて保管庫での肉体労働もこなすんですよ. なんて, ふふ, 冗談です. 半分ぐらいは.",
+ 	 	 	 	 	"アラスカ銀行は, あらゆるあなたの財産を保管いたします.",
+ 	 	 	 	 	"いらっしゃいませ. 本日はどうなさいましたか？",
+ 	 	 	 	 	"年中いつでも24時間, すべての窓口が利用可能でございます",
+ 	 	 	 	 	"この街で最も安全な施設でございます.",
+ 	 	 	 	 	"あら, いらっしゃいませ. わたくしはロッシーと申します. 本日はどうなさいますか？",
+ 	 	 	 	 	"窓口は左手側, ATMは右手側でございます.",
+ 	 	 	 	 	"ようこそいらっしゃいました. ご用件は何でしょう？",
+ 	 	 	 	 	"あら, またあなたですか......どうされました？",
+ 	 	 	 	 	"あなた様のことは信用しております, 面倒事など引き起こされるはずはございませんね. 親愛なるお客様, 本日はどうされましたか？",
+ 	 	 	 	 	"あちらにいるのがミサキです. ローンを組む計画がおありでしたら, ぜひ彼女にお申し付けくださいませ.",
+ 	 	 	 	 	"「フィネル」という名の冒険者に出会ったことはおありですか？",
+ 	 	 	 	 	"我が銀行は世界で最も安全です. まぁ, アラサカ以外の銀行はないのですけれど...",
+ 	 	 	 	 	"新たに預金口座を開設されますか？",
+ 	 	 	 	 	"アルファさんという方が, あなたの名義の保管庫に「英雄の」アイテムがないかと尋ねていかれました.",
+ 	 	 	 	 	"あなたのIDに問題が発生しました. 1BTCをお支払いください."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Welcome. What can I store for you?"
@@ -4391,7 +4518,7 @@
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
  	 	 	 	 	"キャリブレーションコアをマシンに挿入しな. 装備の調整, 手伝ってやるよ",
-          "キャリブレーションは手伝ってやるけど, 事故って装備がぶっ壊れても責任は負わねーぜ.",
+ 	 	 	 	 	"キャリブレーションは手伝ってやるけど, 事故って装備がぶっ壊れても責任は取らねーぜ.",
  	 	 	 	 	"相手の顔をしっかりと見て話す主義でね. ほら, あたしだけじゃなくウチの愛銃もじっくり見てるぜ. アンタの顔.",
  	 	 	 	 	"今日はツいてる気がする？ そいつぁいいや, そこのマシンで一発運試ししてみなよ.",
  	 	 	 	 	"どの装備も現品限りってワケさ. キャリブレーションはご自分の責任でよろしく頼むぜ. あん？ 不安だから責任者立ち合いのもとキャリブしたい？ 目の前にいるじゃんか.",
@@ -4420,7 +4547,32 @@
  	 	"storageMerchant": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"よう, 俺はリーだ. なんでもポケットに突っ込むわけにはいかないだろ？"
+ 	 	 	 	 	"よう, 俺はリーだ. なんでもポケットに突っ込むわけにはいかないだろ？",
+ 	 	 	 	 	"お前さんが欲しい物ぐらいならなんだって揃えてやるぜ.",
+ 	 	 	 	 	"さぁ, 取引といこうじゃないか.",
+ 	 	 	 	 	"お前さんはこれが欲しい, 俺はそれが欲しい. 交易成立だ.",
+ 	 	 	 	 	"で, どうするんだ？ 交易をご希望かい？",
+ 	 	 	 	 	"そろそろバッグを新調するかい？",
+ 	 	 	 	 	"ここじゃあカネは役に立たんぜ. それ以外のモンを見せてもらおうか.",
+ 	 	 	 	 	"いらっしゃい. 大してでかくもない交易所だが, まぁ好きなだけ見てってくれや.",
+ 	 	 	 	 	"今日は何を持ってきたんだ？ 見せてもらおうじゃないか.",
+ 	 	 	 	 	"ウチみたいな店はそう多くないと思うぜ.",
+ 	 	 	 	 	"今日は何を持ってきたんだ？",
+ 	 	 	 	 	"バックパックがあれば, 見つけたお宝をザックザック持って帰れるってな. ...いかん, 俺もオヤジ臭くなってきたみたいだ. 忘れてくれ.",
+ 	 	 	 	 	"質より量を重視してるんでね.",
+ 	 	 	 	 	"交易するのかしないのか, どうなんだ？",
+ 	 	 	 	 	"全てのバッグは「『収納の』バッグ」だと思うんだが...どう思う？",
+ 	 	 	 	 	"もっとかしこく持ち物を収納するやり方があるぜ.",
+ 	 	 	 	 	"俺はリー. お前さんが探してたのはまさに俺さ.",
+ 	 	 	 	 	"そうやって荷物を引きずって歩くのにも疲れてきたんじゃないか？",
+ 	 	 	 	 	"そろそろ新しいバックパックがいるんじゃないのかい.",
+ 	 	 	 	 	"気に入ったか？ そんならぜひ交易してくれ.",
+ 	 	 	 	 	"ポケットが一杯のようだな. 荷物を軽くしたいんなら力になるぜ.",
+ 	 	 	 	 	"ポケットいっぱいに物が入ってちゃあ, まともに戦闘なんて出来んだろ？",
+ 	 	 	 	 	"持ち物を全部ポケットに突っ込む必要はないんだぜ.",
+ 	 	 	 	 	"さぁ取引だ. お前さんは中古のバッグをたくさん持ってくる, 俺は新しいバッグを渡す.",
+ 	 	 	 	 	"ふらついてるように見えるぞ. 荷物を背負いきれてないんじゃないか？",
+ 	 	 	 	 	"バッグが入り用なときはウチに来い. バックパックもある."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hey kid, I'm Lee, You know, you don't have to carry everything you own in your pockets."
