--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -1906,7 +1906,7 @@
  	 	},
  	 	"statsPage": {
  	 	 	"quitGang": {
- 	 	 	 	"trans": "Abandonner",
+ 	 	 	 	"trans": "Quitter le Gang",
  	 	 	 	"eng": "Quit Gang"
  	 	 	},
  	 	 	"logout": {
