--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -1363,7 +1363,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"playerName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${playerName}をブロック解除",
+ 	 	 	 	 	"trans": "${playerName}のブロックを解除",
  	 	 	 	 	"eng": "Unblock ${playerName}"
  	 	 	 	}
  	 	 	}
@@ -4444,28 +4444,24 @@
  	 	 	 	 	"入ってくる前に, せめて止血ぐらいしてくれんかね.",
  	 	 	 	 	"返金も交換もナシだ. 慈善事業をやってるわけじゃないんでね.",
  	 	 	 	 	"よう, 若造. 今日はどうした？",
- 	 	 	 	 	"Don't stop at Grade 7, or else you'll be slaving away here forever like me.",
- 	 	 	 	 	"ここがシャングリ・ラで一番の医療器具販売店さ.",
- 	 	 	 	 	"またSLPDの奴らが騒ぎを起こしやがった. 全く, 評議会にはちゃんともらいたいもんだ I hope the council puts them in their place.",
+ 	 	 	 	 	"せめて中学卒業ぐらいまではそれなりに勉強しとけよ. でなきゃ俺みたいに, 一生こんなとこで働く羽目になっちまう.",
+ 	 	 	 	 	"ここがシャングリ・ラで一番の医療器具販売店だ.",
+ 	 	 	 	 	"またSLPDの奴らが騒ぎを起こしやがった. 全く, 評議会にはちゃんと取り締まってもらいたいもんだ.",
  	 	 	 	 	"なあ, 3Helixネットワークって連中を聞いたことはあるか?",
- 	 	 	 	 	"Hey kid, ever run into anyone called the Worldslayer?",
- 	 	 	 	 	"月にあるレストランってのを聞いたことがあるか？美味い料理はあるんだが, 空気がありやしない！Great food but no atmosphere!",
- 	 	 	 	 	"A cheese factory exploded in France. There was da brie everywhere!",
- 	 	 	 	 	"地質学も「ロック」だが, それがあるのは地理のお陰だろう, ってなGeology rocks but Geography is where it’s at!",
- 	 	 	 	 	"なんで葬儀ってのは毎朝9時にやるのかね. 俺は朝型じゃないってのに...",
- 	 	 	 	 	"Why did Adele cross the road? To say hello from the other side.",
- 	 	 	 	 	"階段ってヤツは信用ならねぇんだ. 絶対どこかに繋がってやがる...",
+ 	 	 	 	 	"なぁおい, ワールドスレイヤーって奴に会ったことはあるか？",
+ 	 	 	 	 	"月面レストランってのを聞いたことがあるか？ 美味い料理はあるんだが, 空気がありやしない！",
+ 	 	 	 	 	"ロックと言やぁ音楽だが, 地質学も相当「ロック」だぜ.",
  	 	 	 	 	"スシがミツバチに向かって何て言うか知ってるか？ 「ワサbee！」ってな.",
- 	 	 	 	 	"過去と現在, それから未来ってのは, 1本の線になってるのさ. 動詞の時制の話だがな.",
- 	 	 	 	 	"電車なんて使うのはやめときな. They have loco motives.",
+ 	 	 	 	 	"過去と現在, それから未来ってのは, 1本の線になってるのさ. なに, 哲学的だって？ いやいや, 動詞の時制の話だぜ.",
+ 	 	 	 	 	"ハイパーループは全く最高だぜ. 旧時代の電車と違って, 「脱線」とかいう「だっせぇ」事故を起こす心配がない.",
  	 	 	 	 	"何でボールがどんどん大きくなっていくんだろうって思ってたんだよ. 次の瞬間には俺の顔面に直撃ときたもんだ.",
- 	 	 	 	 	"I used to work in a shoe-recycling shop. It was sole destroying!",
- 	 	 	 	 	"Come to Quark's! Quark's is fun! Come right now – and don't walk – run!",
- 	 	 	 	 	"I've got the best gear you'll find anywhere!",
- 	 	 	 	 	"I used to collect colored Legendary Special Weapon, but now everything's just white",
+ 	 	 	 	 	"今は3Dプリンタで一発だが, 大昔は装備も全部手作業で作ってたんだろ？ チェーンメイルなんかは相当気が「メイル」作業だったに違いねえな.",
+ 	 	 	 	 	"Quark'sバーに行こうぜ！ 今すぐだ. おいおい, 何をちんたら歩いてるんだ？ 走れ！",
+ 	 	 	 	 	"最高の装備を手に入れたんだ. お前みたいな若造が簡単に手に入れられるようなモンじゃない...なんてことは実はない.",
+ 	 	 	 	 	"俺も昔は, 「珍しい」だとか「伝説」だとかのカラフルな装備に身を包んだもんだがな. 今着てるのはご覧の通り「普通の」白衣さ.",
  	 	 	 	 	"更衣室はあっちだぜ...",
  	 	 	 	 	"おい, とっとと買い物を済ませてくれ. さっきからトイレに行きたいんだ.",
- 	 	 	 	 	"Please take a look! We surely have something that tickles your fancy..."
+ 	 	 	 	 	"おい, 見てみろ！ 面白いモンを見つけたぜ..."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hey kid... Come check out my goods."
@@ -4659,7 +4655,7 @@
  	 	 	 	"eng": "Improve Ammunition"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "より効果的に弾薬を製造する方法を見つけましょう.",
+ 	 	 	 	"trans": "より効果的に弾薬を製造する方法を会得しましょう.",
  	 	 	 	"eng": "Tinker with ammunition, to find more effective ways of crafting it."
  	 	 	}
  	 	},
