--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -4385,7 +4385,7 @@
  	 	 	 	 	"出来る限り一番いいブラスターを探して集めてきてるのさ.",
  	 	 	 	 	"おや, 随分いい武器を他所で買ってきたみたいじゃん. ウチでも何か買ってってくんない？",
  	 	 	 	 	"バーでさぁ, 3人も刺し殺してるヤベー奴を見ちゃったことあるんだよね...エンピツで.",
- 	 	 	 	 	"いらっしゃい, バーバ・ヤーガさん.",
+ 	 	 	 	 	"バーバ・ヤーガの方かい？ いらっしゃい.",
  	 	 	 	 	"ブギーマン！？ ...なんだ, アンタか. びっくりしたよ"
  	 	 	 	],
  	 	 	 	"eng": [
@@ -4422,7 +4422,7 @@
  	 	 	 	"eng": "To progress to the next area, you need to get Secret Key Fragments from dungeons, \r\n        and use the Terminal to Brute Force the key for next area"
  	 	 	},
  	 	 	"canAccessError": {
- 	 	 	 	"trans": "ターミナルにアクセスするにはレベル5以上が必要です",
+ 	 	 	 	"trans": "ターミナルにアクセスするにはレベル5以上になる必要があります",
  	 	 	 	"eng": "You need to be at least level 5 to access terminal"
  	 	 	},
  	 	 	"description": {
