--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -4367,7 +4367,7 @@
  	 	 	 	 	"一人で冒険するのは危険だ. 忘れないようにしなよ.",
  	 	 	 	 	"この店を開くまでは, 私も冒険者をやってたよ.",
  	 	 	 	 	"返品・交換は受け付けてないよ. 買ったモンは責任持って使ってくんな.",
- 	 	 	 	 	"まだまだあるぜ. もっと見てくよな？,
+ 	 	 	 	 	"まだまだあるぜ. もっと見てくよな？",
  	 	 	 	 	"最高品質の武器と防具さ.",
  	 	 	 	 	"銃, ヘルム, 他にもいろいろある. お望みのものは大抵そろってると思うよ.",
  	 	 	 	 	"身を守る装備が欲しいかい, それとも強力な武器をお探しかな？",
