--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -4383,7 +4383,7 @@
  	 	 	 	 	"昔はアンタみたいな冒険者だったんだけど, 膝に弾を受けちまってさ...",
  	 	 	 	 	"LED, ロープ, 爆薬. 欲しいかい？ もちろん持ってっていいよ. ビットコインさえちゃんと払ってくれるんならね.",
  	 	 	 	 	"出来る限り一番いいブラスターを探して集めてきてるのさ.",
- 	 	 	 	 	"おや, 随分いい武器を他所で買ってきたみたいじゃん. ウチでも何か買ってってくんない？",
+ 	 	 	 	 	"おや, ずいぶんいい武器をよそで買ってきたみたいじゃん. ウチでも何か買ってってくんない？",
  	 	 	 	 	"バーでさぁ, 3人も刺し殺してるヤベー奴を見ちゃったことあるんだよね...エンピツで.",
  	 	 	 	 	"バーバ・ヤーガの方かい？ いらっしゃい.",
  	 	 	 	 	"ブギーマン！？ ...なんだ, アンタか. びっくりしたよ"
@@ -4444,7 +4444,7 @@
  	 	 	 	 	"入ってくる前に, せめて止血ぐらいしてくれんかね.",
  	 	 	 	 	"返金も交換もナシだ. 慈善事業をやってるわけじゃないんでね.",
  	 	 	 	 	"よう, 若造. 今日はどうした？",
- 	 	 	 	 	"せめて中学卒業ぐらいまではそれなりに勉強しとけよ. でなきゃ俺みたいに, 一生こんなとこで働く羽目になっちまう.",
+ 	 	 	 	 	"AI学習技術で知識とデータを脳に詰め込めば, 医者にぐらい誰でもなれるさ.",
  	 	 	 	 	"ここがシャングリ・ラで一番の医療器具販売店だ.",
  	 	 	 	 	"またSLPDの奴らが騒ぎを起こしやがった. 全く, 評議会にはちゃんと取り締まってもらいたいもんだ.",
  	 	 	 	 	"なあ, 3Helixネットワークって連中を聞いたことはあるか?",
