--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -405,11 +405,11 @@
  	 	 	 	}
  	 	 	},
  	 	 	"lowPrintLevelTip2": {
- 	 	 	 	"trans": "Augmente ton rang d'impression, en imprimant des plans, en travaillant à l'usine d'impression",
+ 	 	 	 	"trans": "Augmente ton rang d'impression, en utilisant l'imprimante 3D, en travaillant à l'usine d'impression",
  	 	 	 	"eng": "Increase your Printing Rank to create more powerful weapons by printing more caches"
  	 	 	},
  	 	 	"lowPrintLevelTip3": {
- 	 	 	 	"trans": "Ou en imprimant/vendant automatiquement tes plans au Marché Noir",
+ 	 	 	 	"trans": "Ou en faisant affaire au Marché Noir",
  	 	 	 	"eng": "Or by auto print and selling your caches in the Black Market"
  	 	 	},
  	 	 	"quickSlots": {
@@ -449,7 +449,7 @@
  	 	 	 	"eng": "links"
  	 	 	},
  	 	 	"premiumShop": {
- 	 	 	 	"trans": "Boutique payante",
+ 	 	 	 	"trans": "Boutique",
  	 	 	 	"eng": "Premium Shop"
  	 	 	},
  	 	 	"friendList": {
@@ -4386,7 +4386,7 @@
  	 	 	 	"eng": "Automatic Recycler"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Recycleur entièrement automatisé, capable de recycler des objets en 'Pièces technologiques'",
+ 	 	 	 	"trans": "Recycleur entièrement automatisé, capable de recycler des objets pour en faire des 'Pièces technologiques'",
  	 	 	 	"eng": "Fully automated recycler, capable of recycling items to their basic scrap form"
  	 	 	}
  	 	},
@@ -4396,7 +4396,7 @@
  	 	 	 	"eng": "Black Market"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Un marché souterrain rempli de marchands proposants toutes sortes d'offres douteuses et d'objets inconnus. \r\n         Imprime et vends tes plans ici pour gagner de l'argent facile",
+ 	 	 	 	"trans": "Un marché souterrain rempli de marchands aussi douteux que les offres qu'ils proposent. \r\n         Imprime et vends tes plans ici pour gagner de l'argent facile",
  	 	 	 	"eng": "An underground market filled with people with all kind of shady deals and rare loots.\r\n        Print and sell your caches at the here to earn quick money"
  	 	 	}
  	 	}
