--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -4231,7 +4231,7 @@
  	 	"cosmetic": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Salut ! Fais un don pour obtenir des avantages cosmétiques et soutenir les jeux gratuits comme celui-ci !"
+ 	 	 	 	 	"Salut cher donateur ! Abonnes-toi pour obtenir des avantages cosmétiques tout en soutenant ce jeu gratuit !"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hi! Donate to get cosmetic perks and to help support Free-to-Win games like this one!"
@@ -5591,11 +5591,11 @@
  	 	 	 	"eng": "I am Dexter, the developer of CyberCode Online."
  	 	 	},
  	 	 	"content3": {
- 	 	 	 	"trans": "Si tu as un peu d'argent de coté, il serait très utile que tu fasses un don pour aider le soutien et le développement continu du jeu.",
+ 	 	 	 	"trans": "Faire un don est utile pour soutenir le développement continu du jeu.",
  	 	 	 	"eng": "If you have some spare change it would be very helpful if you could donate to help with continued support and development of the game."
  	 	 	},
  	 	 	"content4": {
- 	 	 	 	"trans": "S'il te plait, ne donne que si tu es à l'aise financièrement, tous les avantages ont été conçus de manière à ce que ce soit équitable pour tous les joueurs et ne donneront pas d'avantages dans le jeu.",
+ 	 	 	 	"trans": "S'il te plaît, ne donne que si tu es à l'aise financièrement. Tous les avantages ont été conçus de manière à ce que ce soit équitable pour tous les joueurs et ne donneront pas d'avantages dans le jeu.",
  	 	 	 	"eng": "Please only donate if you are comfortable, all benefits are designed to be fair for all players and will not give an edge in gameplay."
  	 	 	}
  	 	},
