--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -4333,7 +4333,7 @@
  	 	 	 	 	"プリントするのってすっごい楽しいんだよね～！",
  	 	 	 	 	"🎵 あたしは孤独なプリント職人～ 🎶 誰もあたしに友達をプリントしちゃあくれないのさ～ 🎵",
  	 	 	 	 	"ちょっと, ピザをプリントしようとするのやめてくれる？ ソースがマシンに詰まっちゃう！",
-          "メイ…またDexterのところに行ってたんでしょ？で、今度は何？あっちのお客さんが見てるから話なら裏で聞くよ
+          "メイ…またDexterのところに行ってたんでしょ？で、今度は何？あっちのお客さんが見てるから話なら裏で聞くよ"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"I'll print whatever you want if you have the cache!"
