--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -4269,8 +4269,8 @@
  	 	 	 	 	"世界はお金で回ってる！ あなたが寄付してくれたら, あたしもバイトじゃなしにここで働けるようになるんだけどな～？",
  	 	 	 	 	"イカしたプロフィール欄...欲しくない？",
  	 	 	 	 	"あなた, センスがありそうね！ どうかしら, うちでクールなスタイルにしてかない？",
- 	 	 	 	 	"美しくなるためのヒント その1 ： なんと, 色は世界の半分を構築しています！"
-          "あぁ！メイ！来てくれたの！！……って、ごめんなさい。人違いだわ。",
+ 	 	 	 	 	"美しくなるためのヒント その1 ： なんと, 色は世界の半分を構築しています！",
+          "あぁ！メイ！来てくれたの！！……って、ごめんなさい。人違いだわ。"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hi! Donate to get cosmetic perks and to help support Free-to-Win games like this one!"
@@ -4413,7 +4413,6 @@
  	 	 	 	 	"カギがあれば, どんな駅だってコンテナだってロック解除できるんだ. 最高のツールさ. ま, 仕事終わりの一杯の方が最高だけどね！",
  	 	 	 	 	"全てのカギには, それを使って開けるためのものがあるんだ.",
           "メイ,君が治安維持部隊の配属になった話は本当かい？……はは、冗談だよ.そこの君、今のは冗談だから気にしないでくれよ！"
-         　
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"I'll help you to progress to the next area!"
