--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -3427,7 +3427,7 @@
  	 	},
  	 	"healing10": {
  	 	 	"name": {
- 	 	 	 	"trans": "Robot médical légendaire",
+ 	 	 	 	"trans": "Bot médical T8",
  	 	 	 	"eng": "Epic Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
