PL language translation update

--- a/contribution/lang/pl.json
+++ b/contribution/lang/pl.json
@@ -5415,7 +5415,7 @@
  	 	 	 	"eng": "Unofficial translation"
  	 	 	},
  	 	 	"description1": {
- 	 	 	 	"trans": "Ponieważ ta gra jest tworzona przez tylko jedną osobą, bardzo trudno jest poprawnie przetłumaczyć wszystkie języki, ale pracuję nad dodaniem większej ilości tłumaczeń :)",
+ 	 	 	 	"trans": "Ponieważ ta gra jest tworzona przez tylko jedną osobę, bardzo trudno jest poprawnie przetłumaczyć wszystkie języki, ale pracuję nad dodaniem większej ilości tłumaczeń :)",
  	 	 	 	"eng": "As this game is made by only one person, it's very difficult translate all languages correctly, but I am working on adding more translations :)"
  	 	 	},
  	 	 	"description": {
@@ -5489,7 +5489,7 @@
  	 	},
  	 	"review": {
  	 	 	"title1": {
- 	 	 	 	"trans": "Jestem Dexter, twórca tej gry i chciałbym poznać twoją opinie.",
+ 	 	 	 	"trans": "Jestem Dexter, twórca tej gry i chciałbym poznać twoją opinię.",
  	 	 	 	"eng": "I'm Dexter, the developer of this game, and I hope to know your experience so far."
  	 	 	},
  	 	 	"title2": {
