--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -3660,7 +3660,7 @@
  	 	},
  	 	"clanExp": {
  	 	 	"name": {
- 	 	 	 	"trans": "[Gang] Éclat de mémoire de crypté",
+ 	 	 	 	"trans": "[Gang] Éclat de mémoire crypté",
  	 	 	 	"eng": "encrypted gang memory shard"
  	 	 	},
  	 	 	"description": {
