--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -1420,7 +1420,7 @@
  	 	 	 	 	"eng": "Dungeons Under Maintenance"
  	 	 	 	},
  	 	 	 	"des": {
- 	 	 	 	 	"trans": "Les donjons sont actuellement en cours de maintenance, Dexter travaille pour les rendre disponibles dès que possible !",
+ 	 	 	 	 	"trans": "Les donjons sont actuellement en cours de maintenance ; Dexter travaille pour les restituer dès que possible !",
  	 	 	 	 	"eng": "Dungeons are currently under maintenance, Dexter is working on bringing them back as soon as possible!"
  	 	 	 	}
  	 	 	},
@@ -1428,7 +1428,7 @@
  	 	 	 	"trans": "Peut-être veux-tu acheter quelques objets de soin d'abord ?",
  	 	 	 	"eng": "Maybe buy some healing item first?",
  	 	 	 	"des": {
- 	 	 	 	 	"trans": "Il semble que tu n'ais pas d'anti-douleur sur toi ! Achetes-en au Trinoky Mart en ville avant d'entrer dans les donjons. Dans un donjon, tu ne régénéreras pas ta santé après les combats.",
+ 	 	 	 	 	"trans": "Il semble que tu n'ais pas d'anti-douleur sur toi ! Achetes-en au marché de Trinoky en ville avant d'entrer dans les donjons. Dans un donjon, tu ne régénéreras pas ta santé après les combats.",
  	 	 	 	 	"eng": "Seems like you dont have any Pain Away with you, purchase it from Trinoky Mart in the city first before entering dungeons, since you will not regen after battles in dungeon"
  	 	 	 	},
  	 	 	 	"cancel": {
@@ -1449,18 +1449,18 @@
  	 	 	 	},
  	 	 	 	"buyConfirm": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Acheter l'emblème?",
+ 	 	 	 	 	 	"trans": "Acheter l'emblème ?",
  	 	 	 	 	 	"eng": "Purchase Emblem?"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"selectConfirm": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Sélectionner l'emblème?",
+ 	 	 	 	 	 	"trans": "Sélectionner l'emblème ?",
  	 	 	 	 	 	"eng": "Select Emblem?"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"owned": {
- 	 	 	 	 	"trans": "appartient à",
+ 	 	 	 	 	"trans": "possédé",
  	 	 	 	 	"eng": "owned"
  	 	 	 	}
  	 	 	},
@@ -1485,7 +1485,7 @@
  	 	 	 	"eng": "Referral Program"
  	 	 	},
  	 	 	"skipQueue": {
- 	 	 	 	"trans": "File d'attente des 'Global Skip'",
+ 	 	 	 	"trans": "File d'attente du 'Global Skip'",
  	 	 	 	"eng": "Skip Queue"
  	 	 	},
  	 	 	"block-list": {
@@ -1518,7 +1518,7 @@
  	 	 	 	 	"eng": "Who referred you?"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Peux-tu rechercher et sélectionner le joueur qui t'a parrainé?",
+ 	 	 	 	 	"trans": "Peux-tu rechercher et sélectionner le joueur qui t'a parrainé ?",
  	 	 	 	 	"eng": "Please search and select the player who referred you"
  	 	 	 	}
  	 	 	},
